# py-ocsf-arrow

./: .gitignore  README.md  justfile  main.py  mkdocs.yml  pyproject.toml
src/py_ocsf_arrow/: __init__.py  base.py  object_graph.py  promotion.py  promotion_report.py  pyproject.toml  schema_gen.py  schema_loader.py  schema_transform.py  type_map.py
src/py_ocsf_arrow/schema/: __init__.py
src/py_ocsf_arrow/schema/1.0.0/: __init__.py  _profiles.json
src/py_ocsf_arrow/schema/1.0.0/objects/: account.py  actor.py  analytic.py  api.py  attack.py  authorization.py  certificate.py  cis_benchmark_result.py  cis_control.py  cloud.py  compliance.py  container.py  cve.py  cvss.py  dce_rpc.py  device.py  device_hw_info.py  digital_signature.py  display.py  dns_answer.py  dns_query.py  email.py  email_auth.py  enrichment.py  extension.py  feature.py  file.py  finding.py  fingerprint.py  group.py  hassh.py  http_header.py  http_request.py  http_response.py  idp.py  image.py  job.py  kernel.py  kernel_driver.py  keyboard_info.py  (+39 more)
src/py_ocsf_arrow/schema/1.1.0/: __init__.py  _profiles.json
src/py_ocsf_arrow/schema/1.1.0/categories/: __init__.py
src/py_ocsf_arrow/schema/1.1.0/objects/: account.py  actor.py  affected_code.py  affected_package.py  analytic.py  api.py  attack.py  authorization.py  certificate.py  cis_benchmark_result.py  cis_csc.py  cloud.py  compliance.py  container.py  cve.py  cvss.py  cwe.py  database.py  databucket.py  dce_rpc.py  device.py  device_hw_info.py  digital_signature.py  display.py  dns_answer.py  dns_query.py  email.py  email_auth.py  endpoint_connection.py  enrichment.py  epss.py  evidences.py  extension.py  feature.py  file.py  finding.py  finding_info.py  fingerprint.py  firewall_rule.py  group.py  (+59 more)
src/py_ocsf_arrow/schema/1.2.0/: __init__.py  _profiles.json
src/py_ocsf_arrow/schema/1.2.0/objects/: account.py  actor.py  affected_code.py  affected_package.py  agent.py  analytic.py  api.py  attack.py  auth_factor.py  authorization.py  autonomous_system.py  certificate.py  cis_benchmark_result.py  cis_csc.py  cloud.py  compliance.py  container.py  cve.py  cvss.py  cwe.py  data_classification.py  data_security.py  database.py  databucket.py  dce_rpc.py  device.py  device_hw_info.py  display.py  (+77 more)
src/py_ocsf_arrow/schema/1.3.0/: __init__.py  _profiles.json
src/py_ocsf_arrow/schema/1.4.0/: __init__.py  _profiles.json
src/py_ocsf_arrow/schema/1.5.0/: __init__.py
src/py_ocsf_arrow/schema/1.6.0/: __init__.py
src/py_ocsf_arrow/schema/1.7.0/: __init__.py  _profiles.json
src/py_ocsf_arrow/schema/1.8.0/: __init__.py  _profiles.json
src/py_ocsf_postgresql/: __init__.py  pyproject.toml
(+1565 files in other folders)
