[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-ocsf-arrow"
version = "0.1.0"
description = "A Python library for working with OCSF data in Apache Arrow format."
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [
    { name = "Proxay", email = "28168887+ProxayFox@users.noreply.github.com" },
]
dependencies = [
    "ocsf-lib @ git+https://github.com/ProxayFox/ocsf-lib-py.git@426bc9efe26744c46a173e513ea7ce76aa904f74",
    "pyarrow>=23.0.1",
]

[tool.setuptools]
package-dir = { "py_ocsf_arrow" = "." }
